# signlang-eyes

./: .clang-format  .gitignore  CMakeLists.txt  README.en.md  README.md  conanfile.txt
.github/workflows/: code-quality.yml  unit-tests.yml
audio_frontend/: CMakeLists.txt  alsa_capture_device.cpp  audio_frame.hpp  audio_processor.cpp  audio_processor.hpp  audio_publisher.cpp  audio_publisher.hpp  main.cpp  program_options.hpp
cmake/toolchains/: aarch64-buildroot.cmake
conan/profiles/: linux-aarch64-gcc
conf/: conf.toml  llm_system_prompt.txt  system_prompt.txt  unifont-17.0.05.hex
docs/: quick_start.en.md  quick_start.md
env_sound_det/: CMakeLists.txt  audio_ring_buffer.cpp  main.cpp  yamnet_model.cpp
handpose_det/: CMakeLists.txt  handpose_model.cpp  handpose_model.hpp  handpose_transport.cpp  handpose_transport.hpp  main.cpp  program_options.hpp  rknn_runtime.hpp
handpose_det/rknn/include/: Float16.h  rknn_api.h
speech_asr/: CMakeLists.txt  main.cpp  program_options.cpp  whisper_model.cpp  whisper_model.hpp
src/audio_frontend/: CMakeLists.txt  README.en.md  README.md  alsa_capture_device.cpp  alsa_capture_device.hpp  audio_format.hpp  audio_frame.hpp  audio_processor.cpp  audio_processor.hpp  audio_processor_test.cpp  audio_publisher.cpp  audio_publisher.hpp  audio_record_test.cpp  main.cpp  program_options.cpp  program_options.hpp  sound_source_blackboard.cpp  sound_source_blackboard.hpp  sound_source_localization.cpp  sound_source_localization.hpp
src/common/: CMakeLists.txt  README.en.md  README.md  audio_ring_buffer.cpp  audio_ring_buffer.hpp  cpu_affinity.hpp  cpu_affinity_cli.hpp  fixed_string.hpp  ipc_utils.hpp  logging.hpp  logging_cli.hpp  runtime.hpp  time.cpp  time.hpp
src/dataflow_dispatcher/: CMakeLists.txt  README.en.md  README.md  core.cpp  core.hpp  iceoryx_gateway.cpp  iceoryx_gateway.hpp  main.cpp  program_options.cpp  program_options.hpp
src/env_sound_det/: CMakeLists.txt  README.en.md  README.md  audio_ring_buffer.cpp  audio_ring_buffer.hpp  env_sound_result.hpp  iceoryx_gateway.cpp  iceoryx_gateway.hpp  main.cpp  program_options.cpp  program_options.hpp  yamnet_model.cpp  yamnet_model.hpp
src/handpose_det/: CMakeLists.txt  README.en.md  README.md  handpose_frame.hpp  handpose_model.cpp  handpose_model.hpp  handpose_preprocessor.cpp  handpose_preprocessor.hpp  handpose_preprocessor_test.cpp  handpose_selection.cpp  handpose_selection.hpp  handpose_transport.cpp  handpose_transport.hpp  main.cpp  program_options.cpp  program_options.hpp  rknn_runtime.cpp  rknn_runtime.hpp
src/launcher/: CMakeLists.txt  README.en.md  README.md  main.cpp  program_options.cpp  program_options.hpp
src/llm_client/: CMakeLists.txt  README.en.md  README.md  iceoryx_gateway.cpp  iceoryx_gateway.hpp  llm_protocol.hpp  main.cpp  openai_client.cpp  openai_client.hpp  program_options.cpp  program_options.hpp
src/peripheral_service/: CMakeLists.txt  README.en.md  README.md  hex_font.cpp  hex_font.hpp  iceoryx_gateway.cpp  iceoryx_gateway.hpp  main.cpp  oled_framebuffer.cpp  oled_framebuffer.hpp  peripheral_protocol.hpp  program_options.cpp  program_options.hpp  scrolling_display.cpp  scrolling_display.hpp  serial_protocol.cpp  serial_protocol.hpp  serial_transport.cpp  serial_transport.hpp  text_renderer.cpp  text_renderer.hpp
src/position_service/: CMakeLists.txt  event_listener.cpp  event_listener.hpp  main.cpp  payload_queue.hpp  position.hpp  position_parser.cpp  position_parser.hpp  program_options.cpp  program_options.hpp
src/signlang_det/: CMakeLists.txt  README.en.md  README.md  feature_extractor.cpp  feature_extractor.hpp  gesture_management.hpp  gesture_management_service.cpp  gesture_management_service.hpp  gesture_pipeline.cpp  gesture_pipeline.hpp  iceoryx_gateway.cpp  iceoryx_gateway.hpp  keypoint_ring_buffer.cpp  keypoint_ring_buffer.hpp  main.cpp  program_options.cpp  program_options.hpp  prototype_database.cpp  prototype_database.hpp  signlang_model.cpp  signlang_model.hpp  signlang_result.cpp  signlang_result.hpp
src/signlang_manager/: CMakeLists.txt  README.en.md  README.md  bluetooth_gatt_server.cpp  gesture_encoder.cpp  gesture_feature_extractor.cpp  gesture_feature_extractor.hpp  gesture_types.hpp  iceoryx_gateway.cpp  iceoryx_gateway.hpp  main.cpp  manager_service.cpp  manager_service.hpp  program_options.cpp  program_options.hpp  protocol.cpp  prototype_database.cpp  prototype_database.hpp
src/speech_asr/: CMakeLists.txt  README.en.md  README.md  audio_ring_buffer.cpp  audio_ring_buffer.hpp  iceoryx_gateway.cpp  iceoryx_gateway.hpp  main.cpp  program_options.cpp  program_options.hpp  speech_asr_result.cpp  speech_asr_result.hpp  whisper_model.cpp  whisper_model.hpp
src/speech_tts/: CMakeLists.txt  README.en.md  README.md  alsa_playback_device.cpp  alsa_playback_device.hpp  iceoryx_gateway.cpp  iceoryx_gateway.hpp  main.cpp  piper_phonemizer.cpp  piper_phonemizer.hpp  piper_synthesizer.cpp  piper_synthesizer.hpp  program_options.cpp  program_options.hpp  speech_tts_protocol.hpp  speech_tts_service.cpp  speech_tts_service.hpp
src/state_machine/: CMakeLists.txt  README.en.md  README.md  app_state.cpp  app_state.hpp  iceoryx_gateway.cpp  iceoryx_gateway.hpp  main.cpp  program_options.cpp  program_options.hpp  program_options_unit_test.cpp  state_control.cpp  state_control.hpp  state_control_unit_test.cpp
src/telemetry_service/: CMakeLists.txt  README.en.md  README.md  event_listener.cpp  event_listener.hpp  main.cpp  payload_queue.hpp  position.hpp  position_parser.cpp  position_parser.hpp  program_options.cpp  program_options.hpp
src/video_frontend/: CMakeLists.txt  README.en.md  README.md  main.cpp  program_options.cpp  program_options.hpp  v4l2_capture_device.cpp  v4l2_capture_device.hpp  video_format.hpp  video_frame.hpp  video_processor.cpp  video_processor.hpp  video_processor_test.cpp  video_publisher.cpp  video_publisher.hpp  video_snapshot_test.cpp
tests/: CMakeLists.txt  audio_ring_buffer_test.cpp  fixed_string_test.cpp  protocol_test.cpp  serial_protocol_test.cpp
video_frontend/: CMakeLists.txt
(+9 files in other folders)
